Implementación de gestión de incidencias y mejoras en la autenticación de usuarios